testdata/baselines/reference/submodule/compiler/jsFileCompilationTypeParameterSyntaxOfClass.errors.txt
a.js(1,7): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    class C<T> { }
          ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.